Refactor assignment3.ipynb: Update execution counts, remove unnecessary outputs, and add mathematical formulation for warehouse layout optimization. Introduce Gurobi model setup with constraints and objective function for department layout optimization.

--- a/Assignment3/assignment3.ipynb
+++ b/Assignment3/assignment3.ipynb
@@ -13,23 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 44,
    "id": "152cfe81",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pulp in c:\\users\\ruben\\documents\\github\\warehosuing_ass_2\\.venv\\lib\\site-packages (3.3.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import math\n",
-    "import pulp\n"
+    "import pulp\n",
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n"
    ]
   },
   {
@@ -377,7 +371,7 @@
     "}\n",
     "\n",
     "# Example: access a value\n",
-    "print(departments[\"Cross-Dock\"])  # Output: 3520\n",
+    "#print(departments[\"Cross-Dock\"])  # Output: 3520\n",
     "departments_matrix = {\n",
     "    \"Inbound Dock\": {\n",
     "        \"Inbound Dock\": \"-\",\n",
@@ -616,7 +610,7 @@
     "}\n",
     "\n",
     "# Example: access a value   \n",
-    "print(departments_matrix[\"Inbound Dock\"][\"Receiving/Staging\"])  # Output: E"
+    "#print(departments_matrix[\"Inbound Dock\"][\"Receiving/Staging\"])  # Output: E"
    ]
   },
   {
@@ -649,6 +643,381 @@
     "print(numeric_departments_matrix[\"Inbound Dock\"][\"Receiving/Staging\"])  # Output: 3\n",
     "print(numeric_departments_matrix[\"Inbound Dock\"][\"Inbound Dock\"])      # Output: -1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4323f64c",
+   "metadata": {},
+   "source": [
+    "## Mathematical formulation\n",
+    "We consider the following 6 departments\n",
+    "- Inbound Dock\n",
+    "- Receiving/Staging\n",
+    "- Pallet Reserve Storage (Bulk)\n",
+    "- Packing / Wrap / Banding\n",
+    "- Outbound Staging (Join areas for 2-Man Delivery and Parcel)\n",
+    "- Shipping Dock\n",
+    "### Sets\n",
+    "- $ I \\in \\{1,2,3,4,5,6\\} $ are the 6 departments\n",
+    "- $ J \\in \\{1,2,3,4,5,6\\} $ are the 6 departments\n",
+    "\n",
+    "\n",
+    "### Parameters\n",
+    "\n",
+    "- $m$                   - Number of departments \n",
+    "- $f_{ij}$              - Flow from department $i$ to department $j$ \n",
+    "- $c_{ij}$              - Cost of moving a unit load one distance unit from department $i$ to department $j$\n",
+    "- $B_x$                 - Building length (measured along the x-coordinate)\n",
+    "- $B_y$                 - Building width (measured along the y-coordinate)\n",
+    "- $A_i$                 - Area of department $i$\n",
+    "- $L_{i}^{\\text{LB}}$   - Lower limit on the length of department $i$\n",
+    "- $L_{i}^{\\text{UB}}$   - Upper limit on the length of department $i$\n",
+    "- $W_{i}^{\\text{LB}}$   - Lower limit on the width of department $i$\n",
+    "- $W_{i}^{\\text{UB}}$   - Upper limit on the width of department $i$\n",
+    "- $M$                   - Large number \n",
+    "\n",
+    "\n",
+    "### Variables\n",
+    "- $\\alpha_i$: x-coordinate of the centroid of department $i$\n",
+    "- $\\beta_i$: y-coordinate of the centroid of department $i$\n",
+    "- $x_{i}^{\\text{left}}$: x-coordinate of the left (or west) side of department $i$\n",
+    "- $x_{i}^{\\text{right}}$: x-coordinate of the right (or east) side of department $i$\n",
+    "- $y_{i}^{\\text{bottom}}$: y-coordinate of the bottom (or south) side of department $i$\n",
+    "- $y_{i}^{\\text{top}}$: y-coordinate of the top (or north) side of department $i$\n",
+    "- $z_{ij}^{x}$: 1 if department $i$ is strictly to the east of department $j$; 0 otherwise\n",
+    "- $z_{ij}^{y}$: 1 if department $i$ is strictly to the north of department $j$; 0 otherwise\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### Objective function\n",
+    "\n",
+    "$$\n",
+    "\\min \\sum_{i=1}^6 \\sum_{j=1}^6 f_{ij} c_{ij} (|\\alpha_i - \\alpha_j| + |\\beta_i - \\beta_j|)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "### Constraints \n",
+    "The length and width of each department must remain within the specified bounds:\n",
+    "\n",
+    "Length Constraints:\n",
+    "$$\n",
+    "L_i^{\\text{LB}} \\leq (x_i^{\\text{right}} - x_i^{\\text{left}}) \\leq L_i^{\\text{UB}} \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "Width Constraints:\n",
+    "$$\n",
+    "W_i^{\\text{LB}} \\leq (y_i^{\\text{top}} - y_i^{\\text{bottom}}) \\leq W_i^{\\text{UB}} \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Area Constraints:\n",
+    "$$\n",
+    "(x_i^{\\text{right}} - x_i^{\\text{left}})(y_i^{\\text{top}} - y_i^{\\text{bottom}}) = A_i \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "X-Direction Boundaries:\n",
+    "$$\n",
+    "0 \\leq x_i^{\\text{left}} \\leq x_i^{\\text{right}} \\leq B_x \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "Y-Direction Boundaries:\n",
+    "$$\n",
+    "0 \\leq y_i^{\\text{bottom}} \\leq y_i^{\\text{top}} \\leq B_y \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "X-Coordinate Centroid:\n",
+    "$$\n",
+    "\\alpha_i = 0.5x_{i}^{\\text{left}} + 0.5x_{i}^{\\text{right}} \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "Y-Coordinate Centroid:\n",
+    "$$\n",
+    "\\beta_i = 0.5y_{i}^{\\text{bottom}} + 0.5y_{i}^{\\text{top}} \\quad \\forall i \\in I\n",
+    "$$\n",
+    "\n",
+    "East-West Separation:\n",
+    "$$\n",
+    "x_j^{\\text{right}} \\leq x_i^{\\text{left}} + M(1 - z_{ij}^x) \\quad \\forall i,j, i \\neq j\n",
+    "$$\n",
+    "\n",
+    "North-South Separation:\n",
+    "$$\n",
+    "y_j^{\\text{top}} \\leq y_i^{\\text{bottom}} + M(1 - z_{ij}^y) \\quad \\forall i,j, i \\neq j\n",
+    "$$\n",
+    "\n",
+    "Mutual Exclusion:\n",
+    "$$\n",
+    "z_{ij}^x + z_{ji}^x + z_{ij}^y + z_{ji}^y \\geq 1 \\quad \\forall i,j, i \\leq j\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "Continuous Variable Non-negativity:\n",
+    "$$\n",
+    "\\alpha_i, \\beta_i \\geq 0 \\quad \\forall i\n",
+    "$$\n",
+    "\n",
+    "Boundary Variable Non-negativity:\n",
+    "$$\n",
+    "x_{i}^{\\text{left}}, x_{i}^{\\text{right}}, y_{i}^{\\text{bottom}}, y_{i}^{\\text{top}} \\geq 0 \\quad \\forall i\n",
+    "$$\n",
+    "\n",
+    "Binary Variable Declaration:\n",
+    "$$\n",
+    "z_{ij}^{x}, z_{ij}^{y} \\in \\{0, 1\\} \\quad \\forall i,j, i \\neq j\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "b65db987",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter NonConvex to value 2\n",
+      "Set parameter TimeLimit to value 300\n",
+      "Set parameter MIPGap to value 0.01\n",
+      "Gurobi Optimizer version 12.0.3 build v12.0.3rc0 (win64 - Windows 11.0 (26100.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i7-10750H CPU @ 2.60GHz, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 6 physical cores, 12 logical processors, using up to 12 threads\n",
+      "\n",
+      "Non-default parameters:\n",
+      "TimeLimit  300\n",
+      "MIPGap  0.01\n",
+      "NonConvex  2\n",
+      "\n"
+     ]
+    },
+    {
+     "ename": "GurobiError",
+     "evalue": "Model too large for size-limited license; visit https://gurobi.com/unrestricted for more information",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mGurobiError\u001b[39m                               Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[47]\u001b[39m\u001b[32m, line 186\u001b[39m\n\u001b[32m    182\u001b[39m \u001b[38;5;66;03m# -----------------------------\u001b[39;00m\n\u001b[32m    183\u001b[39m \u001b[38;5;66;03m# Solve\u001b[39;00m\n\u001b[32m    184\u001b[39m \u001b[38;5;66;03m# -----------------------------\u001b[39;00m\n\u001b[32m    185\u001b[39m model.update()\n\u001b[32m--> \u001b[39m\u001b[32m186\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m.\u001b[49m\u001b[43moptimize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    188\u001b[39m \u001b[38;5;66;03m# -----------------------------\u001b[39;00m\n\u001b[32m    189\u001b[39m \u001b[38;5;66;03m# Output solution (if found)\u001b[39;00m\n\u001b[32m    190\u001b[39m \u001b[38;5;66;03m# -----------------------------\u001b[39;00m\n\u001b[32m    191\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m model.status == GRB.OPTIMAL \u001b[38;5;129;01mor\u001b[39;00m model.status == GRB.TIME_LIMIT \u001b[38;5;129;01mor\u001b[39;00m model.status == GRB.SUBOPTIMAL:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32msrc\\\\gurobipy\\\\_model.pyx:903\u001b[39m, in \u001b[36mgurobipy._model.Model.optimize\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mGurobiError\u001b[39m: Model too large for size-limited license; visit https://gurobi.com/unrestricted for more information"
+     ]
+    }
+   ],
+   "source": [
+    "# Save as layout_miqcp.py and run with a Python that has gurobipy installed\n",
+    "\n",
+    "\n",
+    "# -----------------------------\n",
+    "# USER PARAMETERS / INPUTS\n",
+    "# -----------------------------\n",
+    "# Selected six departments \n",
+    "selected_depts = [\n",
+    "    \"Inbound Dock\",\n",
+    "    \"Receiving/Staging\",\n",
+    "    \"Pallet Reserve Storage (Bulk)\",\n",
+    "    \"Packing / Wrap / Banding\",\n",
+    "    \"Outbound Staging — 2-Man Delivery\",  # we'll treat 2-man and parcel as separate names if needed\n",
+    "    \"Outbound Staging — Parcel\",\n",
+    "]\n",
+    "\n",
+    "\n",
+    "# If you want exactly six departments as in the textual spec, pick those six:\n",
+    "dept_list = [\n",
+    "    \"Inbound Dock\",\n",
+    "    \"Receiving/Staging\",\n",
+    "    \"Pallet Reserve Storage (Bulk)\",\n",
+    "    \"Packing / Wrap / Banding\",\n",
+    "    # treat join area as two nodes or as single. I'll include both outbound nodes below:\n",
+    "    \"Outbound Staging — 2-Man Delivery\",\n",
+    "    \"Outbound Staging — Parcel\",\n",
+    "    \"Shipping Dock\"\n",
+    "]\n",
+    "\n",
+    "# Building bounding box (user should adjust)\n",
+    "B_x = 300.0\n",
+    "B_y = 200.0\n",
+    "\n",
+    "# Big-M (choose big enough to separate boxes; could be B_x + max width etc.)\n",
+    "M = max(B_x, B_y) * 2.0\n",
+    "\n",
+    "# Lower/upper bounds for lengths/widths (user should refine)\n",
+    "L_LB = {d: 1.0 for d in dept_list}\n",
+    "L_UB = {d: B_x for d in dept_list}\n",
+    "W_LB = {d: 1.0 for d in dept_list}\n",
+    "W_UB = {d: B_y for d in dept_list}\n",
+    "\n",
+    "# Example flow matrix f_ij: we will use your numeric conversion of letter matrix as example flows.\n",
+    "\n",
+    "\n",
+    "# For robustness, create f_ij and c_ij for the chosen dept_list.\n",
+    "# Here we set flows to 1 where not known, and cost c_ij = 1 (unit manhattan cost multiplier).\n",
+    "f = {}\n",
+    "c = {}\n",
+    "for i in dept_list:\n",
+    "    f[i] = {}\n",
+    "    c[i] = {}\n",
+    "    for j in dept_list:\n",
+    "        # default example flow: 0 if same, else try to pick from numeric_departments_matrix if present\n",
+    "        if i == j:\n",
+    "            f[i][j] = 0.0\n",
+    "        else:\n",
+    "            # try to pull from numeric_departments_matrix if present\n",
+    "            f[i][j] = float(numeric_departments_matrix.get(i, {}).get(j, 1.0))\n",
+    "        c[i][j] = 1.0  # unit cost per distance; replace with real distances/costs\n",
+    "\n",
+    "# Areas for the selected departments\n",
+    "A = {d: float(departments.get(d, 1000.0)) for d in dept_list}  # default fallback area 1000\n",
+    "\n",
+    "# -----------------------------\n",
+    "# BUILD GUROBI MODEL\n",
+    "# -----------------------------\n",
+    "model = gp.Model(\"warehouse_layout_miqcp\")\n",
+    "\n",
+    "# Important: allow non-convex quadratic constraints (required for equality of product)\n",
+    "# WARNING: nonconvex QCPs are harder; Gurobi will solve them only if NonConvex is set to 2\n",
+    "model.Params.NonConvex = 2\n",
+    "model.Params.TimeLimit = 300  # optional; remove or change as desired\n",
+    "model.Params.MIPGap = 0.01    # optional\n",
+    "\n",
+    "# Variables:\n",
+    "alpha = {}   # centroid x\n",
+    "beta = {}    # centroid y\n",
+    "x_left = {}\n",
+    "x_right = {}\n",
+    "y_bottom = {}\n",
+    "y_top = {}\n",
+    "for d in dept_list:\n",
+    "    x_left[d] = model.addVar(lb=0.0, ub=B_x, name=f\"x_left_{d}\")\n",
+    "    x_right[d] = model.addVar(lb=0.0, ub=B_x, name=f\"x_right_{d}\")\n",
+    "    y_bottom[d] = model.addVar(lb=0.0, ub=B_y, name=f\"y_bottom_{d}\")\n",
+    "    y_top[d] = model.addVar(lb=0.0, ub=B_y, name=f\"y_top_{d}\")\n",
+    "    alpha[d] = model.addVar(lb=0.0, ub=B_x, name=f\"alpha_{d}\")\n",
+    "    beta[d] = model.addVar(lb=0.0, ub=B_y, name=f\"beta_{d}\")\n",
+    "\n",
+    "# Binary separation variables for each ordered pair i != j\n",
+    "z_x = {}\n",
+    "z_y = {}\n",
+    "for i in dept_list:\n",
+    "    z_x[i] = {}\n",
+    "    z_y[i] = {}\n",
+    "    for j in dept_list:\n",
+    "        if i == j:\n",
+    "            continue\n",
+    "        z_x[i][j] = model.addVar(vtype=GRB.BINARY, name=f\"z_x_{i}_{j}\")\n",
+    "        z_y[i][j] = model.addVar(vtype=GRB.BINARY, name=f\"z_y_{i}_{j}\")\n",
+    "\n",
+    "# Auxiliary distance variables for absolute differences (linearize |alpha_i - alpha_j|)\n",
+    "d_alpha = {}\n",
+    "d_beta = {}\n",
+    "for i in dept_list:\n",
+    "    d_alpha[i] = {}\n",
+    "    d_beta[i] = {}\n",
+    "    for j in dept_list:\n",
+    "        d_alpha[i][j] = model.addVar(lb=0.0, name=f\"d_alpha_{i}_{j}\")\n",
+    "        d_beta[i][j] = model.addVar(lb=0.0, name=f\"d_beta_{i}_{j}\")\n",
+    "\n",
+    "model.update()\n",
+    "\n",
+    "# -----------------------------\n",
+    "# CONSTRAINTS\n",
+    "# -----------------------------\n",
+    "# length and width bounds:\n",
+    "for i in dept_list:\n",
+    "    model.addConstr(x_right[i] - x_left[i] >= L_LB[i], name=f\"len_lb_{i}\")\n",
+    "    model.addConstr(x_right[i] - x_left[i] <= L_UB[i], name=f\"len_ub_{i}\")\n",
+    "    model.addConstr(y_top[i] - y_bottom[i] >= W_LB[i], name=f\"wid_lb_{i}\")\n",
+    "    model.addConstr(y_top[i] - y_bottom[i] <= W_UB[i], name=f\"wid_ub_{i}\")\n",
+    "\n",
+    "# x/y bounds already enforced by var bounds, but add explicit ordering:\n",
+    "for i in dept_list:\n",
+    "    model.addConstr(x_left[i] <= x_right[i], name=f\"left_le_right_{i}\")\n",
+    "    model.addConstr(y_bottom[i] <= y_top[i], name=f\"bottom_le_top_{i}\")\n",
+    "\n",
+    "# centroid definitions\n",
+    "for i in dept_list:\n",
+    "    model.addConstr(alpha[i] == 0.5*(x_left[i] + x_right[i]), name=f\"centroid_x_{i}\")\n",
+    "    model.addConstr(beta[i] == 0.5*(y_bottom[i] + y_top[i]), name=f\"centroid_y_{i}\")\n",
+    "\n",
+    "# area (bilinear) constraints: (x_right - x_left)*(y_top - y_bottom) == A_i\n",
+    "# These are quadratic equality constraints (nonconvex).\n",
+    "for i in dept_list:\n",
+    "    model.addQConstr((x_right[i] - x_left[i]) * (y_top[i] - y_bottom[i]) == A[i],\n",
+    "                     name=f\"area_{i}\")\n",
+    "\n",
+    "# mutual exclusion + Big-M separation constraints for every pair i != j\n",
+    "for i in dept_list:\n",
+    "    for j in dept_list:\n",
+    "        if i == j:\n",
+    "            continue\n",
+    "        # east-west separation: either j is strictly to the west of i (j.right <= i.left)\n",
+    "        # x_j_right <= x_i_left + M(1 - z_ij^x)\n",
+    "        model.addConstr(x_right[j] <= x_left[i] + M*(1 - z_x[i][j]), name=f\"ew_sep_{i}_{j}\")\n",
+    "\n",
+    "        # north-south separation: y_j_top <= y_i_bottom + M(1 - z_ij^y)\n",
+    "        model.addConstr(y_top[j] <= y_bottom[i] + M*(1 - z_y[i][j]), name=f\"ns_sep_{i}_{j}\")\n",
+    "\n",
+    "        # Mutual exclusion: for each unordered pair at least one separation must hold.\n",
+    "        # We'll enforce only once per unordered pair:\n",
+    "# Add mutual exclusion >=1 for unordered pairs (i < j)\n",
+    "for a_idx in range(len(dept_list)):\n",
+    "    for b_idx in range(a_idx+1, len(dept_list)):\n",
+    "        i = dept_list[a_idx]\n",
+    "        j = dept_list[b_idx]\n",
+    "        # z_ij^x + z_ji^x + z_ij^y + z_ji^y >= 1\n",
+    "        model.addConstr(z_x[i][j] + z_x[j][i] + z_y[i][j] + z_y[j][i] >= 1,\n",
+    "                        name=f\"mutual_excl_{i}_{j}\")\n",
+    "\n",
+    "# linearize absolute values for centroid differences:\n",
+    "for i in dept_list:\n",
+    "    for j in dept_list:\n",
+    "        # d_alpha >= alpha_i - alpha_j\n",
+    "        model.addConstr(d_alpha[i][j] >= alpha[i] - alpha[j], name=f\"dalpha_pos_{i}_{j}\")\n",
+    "        # d_alpha >= -(alpha_i - alpha_j)\n",
+    "        model.addConstr(d_alpha[i][j] >= -(alpha[i] - alpha[j]), name=f\"dalpha_neg_{i}_{j}\")\n",
+    "        # likewise for beta\n",
+    "        model.addConstr(d_beta[i][j] >= beta[i] - beta[j], name=f\"dbeta_pos_{i}_{j}'\")\n",
+    "        model.addConstr(d_beta[i][j] >= -(beta[i] - beta[j]), name=f\"dbeta_neg_{i}_{j}\")\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Objective: min sum_{i,j} f_ij * c_ij * (|alpha_i-alpha_j| + |beta_i-beta_j|)\n",
+    "# -----------------------------\n",
+    "obj = gp.quicksum(f[i][j] * c[i][j] * (d_alpha[i][j] + d_beta[i][j])\n",
+    "                  for i in dept_list for j in dept_list)\n",
+    "model.setObjective(obj, GRB.MINIMIZE)\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Solve\n",
+    "# -----------------------------\n",
+    "model.update()\n",
+    "model.optimize()\n",
+    "\n",
+    "# -----------------------------\n",
+    "# Output solution (if found)\n",
+    "# -----------------------------\n",
+    "if model.status == GRB.OPTIMAL or model.status == GRB.TIME_LIMIT or model.status == GRB.SUBOPTIMAL:\n",
+    "    print(\"Objective:\", model.ObjVal)\n",
+    "    for d in dept_list:\n",
+    "        xl = x_left[d].X\n",
+    "        xr = x_right[d].X\n",
+    "        yb = y_bottom[d].X\n",
+    "        yt = y_top[d].X\n",
+    "        print(f\"Dept {d}: x_left={xl:.2f}, x_right={xr:.2f}, y_bottom={yb:.2f}, y_top={yt:.2f}, area={(xr-xl)*(yt-yb):.1f}\")\n",
+    "else:\n",
+    "    print(\"No feasible solution found, status:\", model.status)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "675b4cc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
