added bonus point header

--- a/Assignment3/assignment3.ipynb
+++ b/Assignment3/assignment3.ipynb
@@ -2298,6 +2298,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "934a0401",
+   "metadata": {},
+   "source": [
+    "### Bonus Points\n",
+    "We have linearised the model from above to be able to solve the layout problem also for more departments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f1523679",
